<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <CheckBox
        android:id="@+id/checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:button="@drawable/checkbox_extra_drawable"
        app:buttonTint="@color/color_dark_gray"/>

    <ImageView
        android:id="@+id/priority"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="4dp"
        android:contentDescription="@string/task" />

    <LinearLayout
        android:layout_marginStart="4dp"
        android:id="@+id/textField"
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:paddingVertical="12dp">

        <TextView
            android:id="@+id/task"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?attr/textAppearanceBodyLarge"
            android:textColor="@color/back_dark_primary"
            android:text="@string/description"
            android:maxLines="3"
            android:ellipsize="end"/>

        <TextView
            android:textSize="14sp"
            android:id="@+id/dateText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?attr/textAppearanceBodyMedium"
            android:textColor="@color/color_light_gray" />

    </LinearLayout>

    <ImageView
        android:id="@+id/infoIcon"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginEnd="4dp"
        android:contentDescription="@string/info"
        android:padding="12dp"
        android:src="@drawable/info_outline"
        tools:ignore="ImageContrastCheck" />
</LinearLayout>