<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/back_light_primary"
        android:fitsSystemWindows="true"
        tools:context=".MainActivity">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/back_light_primary"
            android:fitsSystemWindows="true">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:layout_width="match_parent"
                android:layout_height="165dp"
                android:background="@color/back_light_primary"
                android:fitsSystemWindows="true"
                app:collapsedTitleTextAppearance="@style/expandedBarStyle"
                app:expandedTitleMarginBottom="52dp"
                app:expandedTitleMarginStart="62dp"
                app:expandedTitleTextAppearance="@style/expandedBarStyle"
                app:layout_anchor="@+id/appBarLayout"
                app:layout_anchorGravity="center"
                app:layout_scrollFlags="scroll|exitUntilCollapsed"
                app:title="@string/main_title"
                app:titleCollapseMode="scale"
                app:toolbarId="@id/toolbar">

                <com.google.android.material.appbar.MaterialToolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?actionBarSize"
                    android:background="@color/back_light_primary"
                    app:layout_collapseMode="pin" />

                <com.google.android.material.imageview.ShapeableImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|bottom"
                    android:layout_margin="5dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="20dp"
                    android:clickable="true"
                    android:contentDescription="@android:string/paste_as_plain_text"
                    android:focusable="true"
                    android:minWidth="48dp"
                    android:minHeight="48dp"
                    android:paddingTop="10dp"
                    android:paddingHorizontal="12dp"
                    android:src="@drawable/visibility" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/Done"
                    style="@style/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginStart="62dp"
                    android:layout_marginBottom="20dp"
                    android:text="@string/completed_title"
                    android:textColor="#546E7A"
                    app:layout_collapseMode="parallax" />

            </com.google.android.material.appbar.CollapsingToolbarLayout>


        </com.google.android.material.appbar.AppBarLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:paddingStart="8dp"
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/recycler_view_background"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">


        </androidx.recyclerview.widget.RecyclerView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="20dp"
            android:contentDescription="@string/enter_note"
            android:src="@drawable/add" />


    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</androidx.constraintlayout.widget.ConstraintLayout>